PVM Invocations: Improve & correct formalisms

--- a/preamble.tex
+++ b/preamble.tex
@@ -143,6 +143,7 @@
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
 \newcommand*{\joined}{\wideparen}
+\newcommand*{\ang}[1]{\langle#1\rangle}
 
 % GP terms
 \newcommand*{\goodset}{\psi_\mathbf{g}}
