Merklisation: Accumulated buffer items are length-prefixed

--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -38,7 +38,7 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(12) &\mapsto \se_4(\chi_m, \chi_a, \chi_v) \concat \se(\chi_\mathbf{g}) \;, \\
     &&C(13) &\mapsto \se_4(\pi) \;, \\
     &&C(14) &\mapsto \se([\var{i} \mid i \orderedin \ready]) \;, \\
-    &&C(15) &\mapsto \se(\accumulated) \;, \\
+    &&C(15) &\mapsto \se([\var{i} \mid i \orderedin \accumulated]) \;, \\
     \forall (s \mapsto \mathbf{a}) \in \delta: &&C(255, s) &\mapsto \mathbf{a}_c \concat \se_8(\mathbf{a}_b, \mathbf{a}_g, \mathbf{a}_m, \mathbf{a}_l) \concat \se_4(\mathbf{a}_i) \;, \\
     \forall (s \mapsto \mathbf{a}) \in \delta, (k \mapsto \mathbf{v}) \in \mathbf{a}_\mathbf{s}: &&C(s, \se_4(2^{32}-1) \frown k_{0\dots 28}) &\mapsto \mathbf{v} \;, \\
     \forall (s \mapsto \mathbf{a}) \in \delta, (h \mapsto \mathbf{p}) \in \mathbf{a}_\mathbf{p}: &&C(s, \se_4(2^{32}-2) \frown h_{1\dots 29}) &\mapsto \mathbf{p} \;, \\
