--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -289,9 +289,8 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
   \item[$\mathsf{Z}_A = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
   \item[$\mathsf{Z}_I = 2^{24}$] The standard \textsc{pvm} program initialization input data size. See equation \ref{sec:standardprograminit}.
-  \item[$\mathsf{Z}_J = 2^{16}$] The standard \textsc{pvm} program initialization major zone size. See section \ref{sec:standardprograminit}.
-  \item[$\mathsf{Z}_N = 2^{14}$] The standard \textsc{pvm} program initialization minor zone size. See section \ref{sec:standardprograminit}.
   \item[$\mathsf{Z}_P = 2^{12}$] The \textsc{pvm} memory page size. See equation \ref{eq:pvmmemory}.
+  \item[$\mathsf{Z}_Z = 2^{16}$] The standard \textsc{pvm} program initialization zone size. See section \ref{sec:standardprograminit}.
 \end{description}
 
 \subsubsection{Signing Contexts}
