--- a/text/overview.tex
+++ b/text/overview.tex
@@ -88,7 +88,7 @@ While Safrole limits forks to a large extent (through cryptography, economics an
 
 We presume a pre-existing consensus over time specifically for block production and import. While this was not an assumption of Polkadot, pragmatic and resilient solutions exist including the \textsc{ntp} protocol and network. We utilize this assumption in only one way: we require that blocks be considered temporarily invalid if their timeslot is in the future. This is specified in detail in section \ref{sec:blockproduction}.
 
-Formally, we define the time in terms of seconds passed since the beginning of the \Jam\emph{Common Era}, 1200 UTC on January 1, 2024.\footnote{1,704,110,400 seconds after the Unix Epoch.} Midday CET is selected to ensure that all significant timezones are on the same date at any exact 24-hour multiple from the beginning of the common era. Formally, this value is denoted $\mathcal{T}$.
+Formally, we define the time in terms of seconds passed since the beginning of the \Jam\emph{Common Era}, 1200 UTC on January 1, 2025.\footnote{1,704,110,400 seconds after the Unix Epoch.} Midday UTC is selected to ensure that all major timezones are on the same date at any exact 24-hour multiple from the beginning of the common era. Formally, this value is denoted $\mathcal{T}$.
 
 \subsection{Best block}
 
